新增款子頁面

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
           <p class="lead mb-4" style="color: #555; font-size: 1.25rem;">
             您的每一份捐款，都是改變長者人生的力量。<br>讓我們一起攜手前行。
           </p>
-          <a href="/donate" class="btn" style="background-color: #de4949; color: #fff; font-weight: bold; font-size: 1.25rem; padding: 15px 30px; border-radius: 30px; text-transform: uppercase;">
+          <a href="donate.html" class="btn" style="background-color: #de4949; color: #fff; font-weight: bold; font-size: 1.25rem; padding: 15px 30px; border-radius: 30px; text-transform: uppercase;">
             我要捐款
           </a>
         </div>
@@ -633,7 +633,9 @@
             <!-- 信用卡、郵局定期轉帳 -->
             <div class="mb-4">
               <h5 style="color: #E99922; font-size: 1.25rem; font-weight: 600;">信用卡 / 郵局定期轉帳</h5>
-              <p class="text-muted" style="color: #605441 !important;font-size: 1rem; line-height: 1.5;">下載表格或來電索取。</p>
+              <p class="text-muted" style="color: #605441 !important; font-size: 1rem; line-height: 1.5;">
+                <a href="donation_form.pdf" style="color: #605441; text-decoration: underline; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#FFB84D'" onmouseout="this.style.color='#E99922'">下載表格</a> <br>來電索取：(02)2533-3333
+              </p>
             </div>
 
             <hr style="border-top: 2px solid #ddd; margin: 1.5rem 0;">
