--- a/index.html
+++ b/index.html
@@ -99,7 +99,14 @@
                 </li>
                 <li><a href="#services-section" class="nav-link">長者服務</a></li>
                 <li><a href="#contact-section" class="nav-link">聯絡我們</a></li>
-                <li><a href="#Donate-section" class="nav-link btn btn-danger btn-lg px-5 py-3 fw-bold fs-2"style="color: white !important;">捐款</a></li>
+                <li class="dropdown">
+                  <a href="#" class="nav-link btn btn-danger btn-lg px-5 py-3 fw-bold fs-2 dropdown-toggle" style="color: white !important;" data-toggle="dropdown">捐款</a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="donate.html">網路捐款</a>
+                    <a class="dropdown-item" href="forms.html">說明與表格</a>
+                    <a class="dropdown-item" href="mails.html">捐款徵信</a>
+                  </div>
+                </li>     
               </ul>
             </nav>
           </div>
@@ -135,24 +142,27 @@
       </div>
     </div>  
 <!--介紹-->
-    <div class="site-section" id="about-section">
-      <div style="height: 100px;"></div>
-      <div class="container">
-        <div class="row align-items-lg-center">
-          <div class="col-md-6 mb-5 mb-lg-0 position-relative">
-            <img src="images/anout-1.jpg" class="img-fluid" alt="Image">
-            <div class="experience">
-            </div>
-          </div>
-          <div class="col-md-5 ml-auto">
-            <h1 class="title-about-1"><b>您好，</b></h1>
-            <h3 class="title-about-1"><b>我們是台北老人基金會</b></h3>
-            <p class="context-about">我們致力於提供生活援助、安全守護與樂活機會，讓每位長者都能安心、健康、有尊嚴的生活。</p>
-            <p><a href="about.html" class="btn btn-primary btn-black--hover" style="background-color: rgb(240, 170, 41)">了解更多</a></p>
-          </div>
+<div class="site-section" id="about-section">
+  <div class="container">
+    <div class="row align-items-lg-center">
+      <div class="col-md-6 mb-5 mb-lg-0 position-relative">
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="images/anout-1.jpg" class="img-fluid" alt="Image">
+        <div class="experience">
         </div>
       </div>
+      <div class="col-md-5 ml-auto">
+        <h1 class="title-about-1"><b>您好，</b></h1>
+        <h3 class="title-about-1"><b>我們是台北老人基金會</b></h3>
+        <p class="context-about">我們致力於提供生活援助、安全守護與樂活機會，讓每位長者都能安心、健康、有尊嚴的生活。</p>
+        <p><a href="子頁面1.html" class="btn btn-primary btn-black--hover" style="background-color: rgb(240, 170, 41)">了解更多</a></p>
+      </div>
     </div>
+  </div>
+</div>
 
 <!--長者服務介紹-->
     <section class="site-section" id="services-section">
@@ -165,6 +175,7 @@
               <div style="height: 3px; background-color: #E99922; flex-grow: 1;"></div>
               
               <!-- 中央標題 -->
+              <br>
               <h2 class="mx-4 mb-0 fw-bold" style="color: #E99922;">長者服務介紹</h2>
               
               <!-- 右線 -->
@@ -839,5 +850,65 @@
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  </body>
+  <script>
+    // 定義每個 section 的偏移值（單位：像素）
+    const sectionOffsets = {
+      "#services-section": 50, // 服務：距離導覽列底部 150px
+      "#home-section": 50, // 首頁：距離導覽列底部 50px
+      "#contact-section": 15, // 聯絡我們：距離導覽列底部 200px
+    };
+  
+    // 定義處理滾動的函數
+    function handleScrollToSection() {
+      const hash = window.location.hash; // 例如 "#about-section"
+      if (hash) {
+        // 檢查 hash 是否在 sectionOffsets 中
+        if (hash in sectionOffsets) {
+          const targetElement = document.querySelector(hash); // 找到目標元素
+          if (targetElement) {
+            // 動態獲取導覽列高度
+            const navbar = document.querySelector(".site-navbar");
+            const navbarHeight = navbar ? navbar.offsetHeight : 0; // 若無導覽列，設為 0
+  
+            // 獲取該 section 的自訂偏移值
+            const offsetFromNavbar = sectionOffsets[hash];
+  
+            // 計算目標元素的絕對位置（相對於頁面頂部）
+            const elementTop = targetElement.getBoundingClientRect().top + window.scrollY;
+  
+            // 計算滾動位置：元素頂部 - 導覽列高度 + 自訂偏移
+            const scrollPosition = elementTop - navbarHeight + offsetFromNavbar;
+  
+            // 打印計算值，方便檢查
+            console.log("導覽列高度:", navbarHeight);
+            console.log("元素頂部位置:", elementTop);
+            console.log("自訂偏移:", offsetFromNavbar);
+            console.log("目標滾動位置:", scrollPosition);
+  
+            // 滾動到計算出的位置，帶平滑效果
+            window.scrollTo({
+              top: Math.max(0, scrollPosition),
+              behavior: "smooth",
+            });
+          } else {
+            console.log("找不到目標元素:", hash);
+          }
+        } else {
+          console.log("非目標 section，不執行調整:", hash);
+        }
+      } else {
+        console.log("URL 沒有 hash");
+      }
+    }
+  
+    // 頁面載入時檢查初始 hash
+    window.addEventListener("load", function () {
+      setTimeout(handleScrollToSection, 100); // 延遲 100ms 確保 DOM 穩定
+    });
+  
+    // 監聽 hash 變化（處理導覽列點擊）
+    window.addEventListener("hashchange", function () {
+      setTimeout(handleScrollToSection, 100); // 延遲 100ms 確保 DOM 穩定
+    });
+  </script>
 </html>
