--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
                     <li><a class="dropdown-item" href="about.html#intro-section">基金會簡介</a></li>
                     <li><a class="dropdown-item" href="about.html#groups-section">基金會分組</a></li>
-                    <li><a class="dropdown-item" href="#events-section">基金會記事</a></li>
+                    <li><a class="dropdown-item" href="about.html#events-section">基金會記事</a></li>
                   </ul>
                 </li>
                 <li><a href="#services-section" class="nav-link">長者服務</a></li>
@@ -158,7 +158,7 @@
         <h1 class="title-about-1"><b>您好，</b></h1>
         <h3 class="title-about-1"><b>我們是台北老人基金會</b></h3>
         <p class="context-about">我們致力於提供生活援助、安全守護與樂活機會，讓每位長者都能安心、健康、有尊嚴的生活。</p>
-        <p><a href="子頁面1.html" class="btn btn-primary btn-black--hover" style="background-color: rgb(240, 170, 41)">了解更多</a></p>
+        <p><a href="about.html" class="btn btn-primary btn-black--hover" style="background-color: rgb(240, 170, 41)">了解更多</a></p>
       </div>
     </div>
   </div>
