--- a/about.html
+++ b/about.html
@@ -85,9 +85,17 @@
 }
 
 .timeline-item {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.6s ease;
   margin-bottom: 25px;
   position: relative;
   padding-left: 30px;
+}
+
+.timeline-item.fade-up {
+  opacity: 1;
+  transform: translateY(0);
 }
 .timeline-item::before {
   content: '';
@@ -171,7 +179,7 @@
 <li><a class="dropdown-item" href="#groups-section">基金會分組</a></li>
 <li><a class="dropdown-item" href="#events-section">基金會記事</a></li>
 </ul>
-</li>
+<li><a href="report.html" class="nav-link">財務報告</a></li>
 <li><a href="index.html#Donate-section" class="nav-link btn btn-danger btn-lg px-5 py-3 fw-bold fs-2" style="color: white !important;">捐款</a></li>
 </ul>
 </nav>
@@ -289,39 +297,288 @@ data-aos="fade">
     <!-- 時間軸內容區 -->
     <div class="timeline-scrollbox">
       <div class="timeline">
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">76.07</div>
           <div class="timeline-content">財團法人臺北市老人基金會經臺北市政府社會局登記設立，參與老人福利服務工作。</div>
         </div>
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">76.12</div>
           <div class="timeline-content">設置老人諮詢中心，整合相關老人研究議題。</div>
         </div>
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">77.04</div>
           <div class="timeline-content">設置助養組協助貧困無依老人。</div>
         </div>
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">78.01</div>
           <div class="timeline-content">寒冬送暖』系列活動包含望年餐會，致贈助養品、助養金，至今持續進行中。</div>
         </div>
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">78.07</div>
           <div class="timeline-content">助養組推動會審會辦，個案管理制度。</div>
         </div>
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">79.01</div>
           <div class="timeline-content">成立24小時全年無休老人救援中心。</div>
         </div>
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">80.03</div>
           <div class="timeline-content">與中國老年基金會合作交流。</div>
         </div>
-        <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-item" >
           <div class="timeline-date">80.12</div>
           <div class="timeline-content">製作金色年華、重陽節等老人福利電視節目。</div>
         </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">81.04</div>
+          <div class="timeline-content">推動獨居老人居家保全『生命連線』系統。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">81.12</div>
+          <div class="timeline-content">設置防護組，協助受虐老人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">82.10</div>
+          <div class="timeline-content">與中視聯合制作『養兒防老』節目報導獨居、失養之孤苦老人，使社會大眾正視獨居老人問題。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">83.03</div>
+          <div class="timeline-content">『生命關懷愛心連線』召集北區無線電計程車聯誼會七仟輛車，成立獨居老人緊急救援系統。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">83.07</div>
+          <div class="timeline-content">『老人保護委員會』由基金會邀集五十八位立委共同出席，達成老人福利相關法案之推動。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">84.02</div>
+          <div class="timeline-content">協助14、15號公園拆遷戶老人尋找安置新家。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">84.06</div>
+          <div class="timeline-content">與中央員警大學合辦『和諧專案』，配合全省一萬五仟位勤區員警，主動提報疑似受虐老人個案。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">85.06</div>
+          <div class="timeline-content">推動修正老人福利法，確立老人為65歲以上，並增加老人保護專章。</div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-date">85.06</div>
+          <div class="timeline-content">完成國內首冊老人保護計畫書。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">86.01</div>
+          <div class="timeline-content">成立桃園、新竹、苗栗、台中、南投、嘉義、台南、高雄八處老人防護聯絡處。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">86.07</div>
+          <div class="timeline-content">設置『老人中途之家』24小時緊急安置迷途、受虐老人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">87.01</div>
+          <div class="timeline-content">『希望之燈』寒冬送暖系列活動，發掘千餘位需協助個案。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">87.12</div>
+          <div class="timeline-content">設置協尋組，協助迷途老人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">88.01</div>
+          <div class="timeline-content">與中視、聯合報、警廣製作『他在哪里?』迷途老人協尋專案，協助800位老人返家團圓。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">88.06</div>
+          <div class="timeline-content">	與東森s台聯合制作『老有所養』單元，報導獨居老人個案協尋迷途老人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">88.07</div>
+          <div class="timeline-content">一九九九年國際關懷年『我愛老人公益宣誓』十二位新聞主播以愛心手印，發起關懷獨居老人活動。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">88.09</div>
+          <div class="timeline-content">『921震災黃菊花重生計畫』921地震後基金會緊急安置失能老人274位，關懷協助災區低收入戶及失依老人逾2000件個案，至今仍持續輔導中。</div>
+        </div>
 
+        <div class="timeline-item" >
+          <div class="timeline-date">88.11</div>
+          <div class="timeline-content">與廣青合唱團共同舉辦『守護黃菊花音樂會』，以紀念921死難老人。</div>
+        </div>
+
+        <div class="timeline-item" >
+          <div class="timeline-date">89.01</div>
+          <div class="timeline-content">『寒冬送暖』於臺北市內湖區團管司令部，宴請一仟余名獨居老人春節圍爐並致贈紀念品及紅包。</div>
+        </div>
+
+        <div class="timeline-item" >
+          <div class="timeline-date">89.03</div>
+          <div class="timeline-content">由本會及義工結合扶青團組成獨居老人在宅服務。</div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-date">89.05</div>
+          <div class="timeline-content">『母親節愛心連線敬老活動』，致贈送500具聲控手機予貧苦獨居老人，使老人在危難時候能獲得及時幫助。</div>
+        </div>
+
+        <div class="timeline-item" >
+          <div class="timeline-date">89.06</div>
+          <div class="timeline-content">與臺北縣警察局合作協尋老人資料比對及資源整合會議，期待協助更多迷途老人歸家。</div>
+        </div>
+
+        <div class="timeline-item" >
+          <div class="timeline-date">89.07</div>
+          <div class="timeline-content">設立921災區中寮鄉、仁愛鄉重建委員會。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.07</div>
+          <div class="timeline-content">與臺北市政府共同發表家庭暴力防治法推行宣導成立發表會，專案提出老人受虐個案研討及防治方法。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.08/div>
+          <div class="timeline-content">『失蹤老人何處尋』公聽會，由本會甘秘書長及立法院張蔡美委員等共同主持，警政署、資策會等參與。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.08</div>
+          <div class="timeline-content">農禪寺中元祭吊念本會四千位過世個案獨居老人，以慰其在天之靈。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.10</div>
+          <div class="timeline-content">協助東森電視臺，探討社會獨居老人個案。並協助東森新聞協尋老人單元開播，促使社會大眾對迷途老人問題之關注。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.10</div>
+          <div class="timeline-content">教育電臺『黃金歲月』節目播出，以老人生活及社會互動關係為主題，使老人在社會的參與協助下，有更優質的生活品質。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.11</div>
+          <div class="timeline-content">臺北之音電臺現場節目播出，由本會甘秘書長及譚艾珍小姐共同主持，以有效宣導老人如何過生活為主題。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.12</div>
+          <div class="timeline-content">協助全省二十一縣市設置獨居老人生命連線。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">89.12</div>
+          <div class="timeline-content">『千山萬水總是情』敬老孝親陪老人走向戶外活動，在捷運淡園廣場，參與老人五千人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">90.02</div>
+          <div class="timeline-content">設置服務組，提供老人全方位的服務。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">90.03</div>
+          <div class="timeline-content">與臺北市立體育場合辦『長青族運動研習營』活動，參與老人二萬人以上，成功推展銀髮族全民運動。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">90.05</div>
+          <div class="timeline-content">與中天新聞台及中華電信共同舉辦『尋找臺灣關懷心』活動。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">90.05</div>
+          <div class="timeline-content">母親節當天于立法院召開尋親記者會，發表協尋個案母親請求協尋失蹤父母。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">90.07</div>
+          <div class="timeline-content">協助行政院國科會研究計畫『都市政策、政策網路與地方政府社會福利建構之研究』。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">90.07</div>
+          <div class="timeline-content">本會甘秘書長受邀日本政府內政聽代表亞洲區研究老人福利政策及日本黃金法案政策階段執行成效討論會議。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">90.12</div>
+          <div class="timeline-content">『2001銀髮嘉年華』于大安森林公園舉辦歡樂遊園會，邀請老人參與健康休閒活動，與會老人八仟人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">91.03</div>
+          <div class="timeline-content">獲頒總統褒揚全國十大優良基金會。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">91.08</div>
+          <div class="timeline-content">『2002 銀髮運動研習營』活動，與會老人及民眾逾25000人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">91.10</div>
+          <div class="timeline-content">『銀髮重陽敬老列車』與臺北捷運公司共同發起于重陽節期間，鼓勵老人搭乘捷運活動，參與老人達四十萬人次。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">92.07</div>
+          <div class="timeline-content">『銀髮奇機』與中華電信合作，推出適用于老人的行動電話，結合基地台定位等多項服務專案。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">93.06</div>
+          <div class="timeline-content">『第一屆老人運動會』規劃健走、健跑、游泳、桌球、羽球、網球、籃球、木球、槌球、地面高球、歌唱、象棋、圍棋、麻將、攝影十五項競賽，參與老人二萬余人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">94.10</div>
+          <div class="timeline-content">『第二屆老人運動會』于臺北小巨蛋舉行，參與老人三萬余人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">95.10</div>
+          <div class="timeline-content">『第三屆老人運動會』于臺北田徑場舉行，新增鐵人賽項目，參與老人四萬余人。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">96.04</div>
+          <div class="timeline-content">辦理老人助養總檢討，訂定會審會辦、個案管理方案，及三項特案老人補助辦法。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">97.05</div>
+          <div class="timeline-content">邀請大陸各地老齡辦參觀訪問，討論兩岸老人福利服務辦法及建言。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">98.10</div>
+          <div class="timeline-content">辦理第六屆臺北老人運動會，增加老齡橄欖球、足球競賽項目。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">99.07</div>
+          <div class="timeline-content">辦理助防協三組個案總清查和檢討。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">100.03</div>
+          <div class="timeline-content">建國百年慶助活動，帶領老人遊園踏青。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">101.02</div>
+          <div class="timeline-content">風雲杯全國麻將比賽，由本會和臺北市老年運動協會共同舉辦。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">101.09</div>
+          <div class="timeline-content">與中國國家康復輔具研究中心合作養老護理臺灣模式。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">102.06</div>
+          <div class="timeline-content">辦理老年服務講習，培訓優秀服務人員。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">102.11</div>
+          <div class="timeline-content">第十屆臺北老年運動會，百齡和九十歲以上高齡選手參加踴躍。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">103.07</div>
+          <div class="timeline-content">兩岸老年產業研討會，於北京開幕。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">104.10</div>
+          <div class="timeline-content">第十二屆台北老年運動會，九十歲以上選手超過三十位。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">105.08</div>
+          <div class="timeline-content">老年90網站及呼叫中心啟動。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">105.08</div>
+          <div class="timeline-content">老年生命年限網站及呼叫中心啟動。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">106.09</div>
+          <div class="timeline-content">辦理台灣大學2017台北老年運動會。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">107.07</div>
+          <div class="timeline-content">辦理養老照料中心。</div>
+        </div>
+        <div class="timeline-item" >
+          <div class="timeline-date">108.03</div>
+          <div class="timeline-content">推動90乾糧專案。</div>
+        </div>
       </div>
     </div>
   </div>
@@ -403,7 +660,24 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </script>
 
 <script>
-AOS.init();
+document.addEventListener('DOMContentLoaded', function() {
+    const items = document.querySelectorAll('.timeline-item');
+    const container = document.querySelector('.timeline-scrollbox');
+
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('fade-up');
+                observer.unobserve(entry.target);  // 滾動到一次就不再重複觸發
+            }
+        });
+    }, {
+        root: container,  // 用 timeline-scrollbox 當捲動容器
+        threshold: 0.1    // 顯示 10% 就觸發動畫
+    });
+
+    items.forEach(item => observer.observe(item));
+});
 </script>
 </body>
 </html>
