--- a/index.html
+++ b/index.html
@@ -33,6 +33,64 @@
       .context-about {
         text-align: left;
       }
+/*照片牆*/
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Noto Sans TC', sans-serif;
+      background-color: #f8f8f8;
+      color: #333;
+    }
+
+    .photo-wall {
+      padding: 30px;
+      text-align: center;
+      background-color: #f8f8f8;
+    }
+
+    .photo-wall h2 {
+      font-size: 28px;
+      margin-bottom: 25px;
+      color: #f39c12;  /* 溫暖橘黃，公益感 */
+    }
+
+    /* 照片牆排版 */
+    /* 基金會配色風格 */
+      .photo-wall {
+        padding: 30px;
+        text-align: center;
+        background-color: #f8f8f8;
+      }
+
+      .photo-wall h2 {
+        font-size: 35px;
+        margin-bottom: 30px;
+        color: #f39c12;
+      }
+
+      /* 照片牆排版 */
+      .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 15px;
+        justify-items: center;
+      }
+
+      /* 去除動畫，保留hover效果 */
+      .gallery img {
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(39, 174, 96, 0.2);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .gallery img:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 16px rgba(39, 174, 96, 0.3);
+      }
+      /*尾頁設定*/
       .footer {
         background-color: #5c3d1d; 
         color: white;
@@ -641,9 +699,32 @@
 
         </div>
     </section>
+<!--照片牆-->
+<section class="photo-wall">
+  <h2>紀錄照片</h2>
+  <div class="gallery">
+    <img src="images/photo1.jpg" alt="活動1">
+    <img src="images/photo2.jpg" alt="活動2">
+    <img src="images/photo3.jpg" alt="活動3">
+    <img src="images/photo4.jpg" alt="活動4">
+    <img src="images/photo5.jpg" alt="活動5">
+    <img src="images/photo6.jpg" alt="活動6">
+    <img src="images/photo7.jpg" alt="活動7">
+    <img src="images/photo8.jpg" alt="活動8">
+    <img src="images/photo9.jpg" alt="活動9">
+    <img src="images/photo10.jpg" alt="活動10">
+    <img src="images/photo11.jpg" alt="活動11">
+    <img src="images/photo12.jpg" alt="活動12">
+    <img src="images/photo13.jpg" alt="活動13">
+    <img src="images/photo14.jpg" alt="活動14">
+    <img src="images/photo15.jpg" alt="活動15">
+    <img src="images/photo16.jpg" alt="活動16">
+  </div>
+</section>
 
+<!--捐款頁面-->
     <section class="container my-5 py-5"  id="Donate-section">
-      <div style="height: 100px;"></div>
+      <div style="height: 60px;"></div>
       <div class="row align-items-center">
         <!-- 左側：捐款標題與按鈕 -->
         <div class="col-md-6 mb-4 mb-md-0">
