--- a/donate.html
+++ b/donate.html
@@ -106,14 +106,7 @@
               <li><a href="index.html#about-section" class="nav-link">關於我們</a></li>
               <li><a href="index.html#services-section" class="nav-link">長者服務</a></li>
               <li><a href="index.html#contact-section" class="nav-link">聯絡我們</a></li>
-              <li class="dropdown">
-                <a href="#" class="nav-link btn btn-danger btn-lg px-5 py-3 fw-bold fs-2 dropdown-toggle" style="color: white !important;" data-toggle="dropdown">捐款</a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="donate.html">網路捐款</a>
-                  <a class="dropdown-item" href="forms.html">說明與表格</a>
-                  <a class="dropdown-item" href="mails.html">捐款徵信</a>
-                </div>
-              </li>            
+              <li><a href="#" class="nav-link btn btn-danger btn-lg px-5 py-3 fw-bold fs-2 dropdown-toggle" style="color: white !important;" data-toggle="dropdown">捐款</a></li>            
             </ul>
           </nav>
         </div>
