--- a/mails.html
+++ b/mails.html
@@ -85,18 +85,11 @@
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a href="#home-section" class="nav-link">首頁</a></li>
-              <li><a href="#about-section" class="nav-link">關於我們</a></li>
-              <li><a href="#services-section" class="nav-link">長者服務</a></li>
-              <li><a href="#contact-section" class="nav-link">聯絡我們</a></li>
-              <li class="dropdown">
-                <a href="#" class="nav-link btn btn-danger btn-lg px-5 py-3 fw-bold fs-2 dropdown-toggle" style="color: white !important;" data-toggle="dropdown">捐款</a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="donate.html">網路捐款</a>
-                  <a class="dropdown-item" href="forms.html">說明與表格</a>
-                  <a class="dropdown-item" href="mails.html">捐款徵信</a>
-                </div>
-              </li>            
+              <li><a href="index.html#home-section" class="nav-link">首頁</a></li>
+              <li><a href="index.html#about-section" class="nav-link">關於我們</a></li>
+              <li><a href="index.html#services-section" class="nav-link">長者服務</a></li>
+              <li><a href="index.html#contact-section" class="nav-link">聯絡我們</a></li>
+              <li><a href="#" class="nav-link btn btn-danger btn-lg px-5 py-3 fw-bold fs-2 dropdown-toggle" style="color: white !important;" data-toggle="dropdown">捐款</a></li>                  
             </ul>
           </nav>
         </div>
