--- a/mails.html
+++ b/mails.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>捐款徵信 - 老人基金會</title>
+  <title>捐款徵信 - 台北市老人基金會</title>
+  <link rel="icon" href="images/title.png" type="image/x-icon" >
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
