--- a/about.html
+++ b/about.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>關於我們</title>
+<title>關於我們 - 台北市老人基金會</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<link rel="icon" href="images/title.png" type="image/x-icon" >
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
 <link rel="stylesheet" href="fonts/icomoon/style.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
