--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
       <div class="container">
         <div class="row mb-4">
           <div class="col-12 text-center">
-            <h2 class="contact-title mb-3">聯絡我們</h2>
+            <h2 class="contact-title mb-3 title-about-2">聯絡我們</h2>
           </div>
         </div>
         <div class="row">
